src/styles/App.css
@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');

* {
  font-family: 'Playfair Display', serif;
  margin: 0;
  padding: 0;
  text-decoration: none;
  color: inherit;
  background-color: var(--color-tan);
}

/* Creating Horizontal line (fullscreen) */
hr {
  display: block;
  height: 6px;
  border: 0;
  border-top: 1px solid var(--color-black);
  margin: 20px; /* Adjust spacing as needed */
  padding: 0;
  opacity: 0.5;
}

/* Creating Horizontal line (half-screen) */

.hr-half-screen {
  display: flex;
  padding-right: var(--padding-small);
  opacity: 0.5;
}

.hr-half-screen::before {
  content: '';
  flex: 1;
}

.hr-half-screen::after {
  content: '';
  flex: 1;
  border-top: 1px solid var(--color-black); /* Add border top for the line */
  margin-bottom: 20px;
  margin-left: auto; /* Float to the right */
}

/* // CAROUSEL */
/* ACTIVE DESIGN STATE */
.HousesDot.active {
  background-color: var(--color-white);
}

